# music-player

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  db.py  docker-compose.yml  pyproject.toml  requirements.txt  settings.py
.github/workflows/: ci-cd.yml
extensions/: admin.py  error_handling.py  events.py  music.py  one_piece.py  space.py  trivia.py
my_discord_bot/: __main__.py  bot.py  settings.py
my_discord_bot/cogs/: __init__.py  admin.py  events.py  music.py  one_piece.py  space.py  trivia.py
src/music_player/: __init__.py  bot.py  exceptions.py  settings.py
src/music_player/cogs/: __init__.py  bot_cog.py  music.py
src/my_discord_bot/: __init__.py  bot.py
src/my_discord_bot/cogs/: __init__.py  music.py
