[project]
name = "music-player"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "discord-py[voice]>=2.5.2",
    "envkit>=0.3.1",
    "yt-dlp>=2025.9.5",
]

[project.scripts]
music_player = "music_player:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
